Add auth page and switch to chakra ui

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,8 @@ ports:
   - port: 8080
     onOpen: open-preview
 tasks:
-  - init: yarn
+  - init: yarn install
     command: yarn start
 github:
   prebuilds:
-    pullRequestsFromForks: true
+    pullRequestsFromForks: false
